# machine-api

./: .gitignore  .gitmodules  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md  catalog-info.yaml  flake.nix  justfile  mk3.ini  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: cargo-build.yml  cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml  cross-deps.sh  deployment.yml  docker-image.yml  make-release.yml  update-spec-for-repos.yml  validate-openapi-spec.yml
bambu-stream/: Cargo.toml  NOTES.md  README.md  sample-handshake.txt
bambu-stream/src/: main.rs  no_auth.rs  rtsps.rs
bambulabs/: Cargo.toml
bambulabs/src/: client.rs  command.rs  fan.rs  features.rs  lib.rs  message.rs  no_auth.rs  parser.rs  sequence_id.rs  speedprofile.rs  templates.rs
config/bambu/: filament-0.2-nozzle.json  filament.json  machine-0.2-nozzle.json  machine.json  process-0.10mm.json  process.json
config/prusa/: ender3.ini  neptune4.ini
kubernetes/base/: deployment.yaml  ghcr-auth.yaml  kustomization.yaml  pod-disruption-budget.yaml  service-account.yaml  service.yaml
kubernetes/dev/: kustomization.yaml  secrets.yaml
kubernetes/prod/: kustomization.yaml
moonraker/: Cargo.toml
moonraker/src/: lib.rs  metrics.rs  print.rs  status.rs  upload.rs
openapi/: api-tags.txt  api.json  tag-config.json
orcaslicer/: Cargo.toml  build.rs
orcaslicer/build_support/: build.rs  cmake_ext.rs  dependency.rs  mod.rs  target.rs
orcaslicer/src/: lib.rs  wrapper.hpp
src/: any.rs  any_machine.rs  config.rs  discover.rs  file.rs  gcode.rs  lib.rs  machine.rs  main.rs  noop.rs  print_manager.rs  sync.rs  tests.rs  traits.rs  usb_printer.rs
src/bambu/: control.rs  discover.rs  mod.rs  temperature.rs
src/formlabs/: mod.rs
src/gcode/: mod.rs  usb.rs
src/gcode/usb/: control.rs  discover.rs  mod.rs
src/moonraker/: control.rs  mod.rs  slicer.rs  temperature.rs  variants.rs
src/network_printer/: bambu_x1_carbon.rs  formlabs.rs  mod.rs
src/server/: context.rs  cors.rs  endpoints.rs  mod.rs  raw.rs
src/slicer/: config.rs  mod.rs  noop.rs  orca.rs  prusa.rs
src/usb/: control.rs  discover.rs  discover_variants.rs  mod.rs
