[package]
name = "machine-api"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
bytes = "1.7.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.4.6", features = ["cargo", "derive", "env", "unicode"] }
console-subscriber = { version = "0", optional = true }
dashmap = "6.0.1"
delouse = { version = "0.1", optional = true }
dropshot = "0.10"
futures = "0.3.28"
futures-util = "0.3.30"
git_rev = "0.1.0"
http = "0.2.8"
libmdns = "0.8.0"
mdns = "3.0.0"
multer = { version = "3.1.0", features = ["json"] }
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "0.8", features = ["chrono", "uuid1", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.4.0"
signal-hook = "0.3"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
tempdir = "0.3.7"
thiserror = "1.0.63"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
tracing = "0.1"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.12", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json", "env-filter"] }
uuid = "1.10.0"

[dev-dependencies]
async-trait = "0.1"
expectorate = "1"
openapiv3 = "2"
portpicker = "0.1.1"
pretty_assertions = "1"
rand = "0.8"
test-context = "0.3.0"
testresult = "0.4.1"

[features]
debug = ["dep:delouse", "dep:console-subscriber"]
