[package]
name = "machine-api"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[workspace]
members = [
	"bambulabs",
	"moonraker"
]

[features]
default = ["bambu", "formlabs", "moonraker", "serial"]
debug = ["dep:delouse", "dep:console-subscriber"]
bambu = ["dep:bambulabs"]
formlabs = []
serial = ["dep:tokio-serial"]
moonraker = ["dep:moonraker"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
bambulabs = { path = "bambulabs", optional = true }
bytes = "1.7.1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.5.14", features = ["cargo", "derive", "env", "unicode"] }
console-subscriber = { version = "0", optional = true }
dashmap = "6.0.1"
delouse = { version = "0.1", optional = true }
dropshot = "0.10"
futures = "0.3.28"
futures-util = "0.3.30"
git_rev = "0.1.0"
http = "1.1.0"
libmdns = "0.8.0"
mdns = "3.0.0"
multer = { version = "3.1.0", features = ["json"] }
moonraker = { path = "moonraker", optional = true }
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "0.8", features = ["chrono", "uuid1", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
tempdir = "0.3.7"
thiserror = "1.0.63"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
toml = "0.8.19"
tracing = "0.1"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json", "env-filter"] }
uuid = "1.10.0"
tokio-serial = { version = "5", optional = true, features = ["tokio-util"] }

[dev-dependencies]
async-trait = "0.1"
expectorate = "1"
openapiv3 = "2"
portpicker = "0.1.1"
pretty_assertions = "1"
rand = "0.8"
test-context = "0.3.0"
testresult = "0.4.1"
