[package]
name = "machine-api"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[workspace]
members = [
	"bambulabs",
	"moonraker"
]

[features]
default = ["bambu", "formlabs", "moonraker", "serial"]
debug = ["dep:delouse", "dep:console-subscriber"]
bambu = ["dep:bambulabs"]
formlabs = []
serial = ["dep:tokio-serial"]
moonraker = ["dep:moonraker"]

[dependencies]
anyhow = "1.0.90"
async-trait = "0.1.83"
bambulabs = { path = "bambulabs", optional = true }
bytes = "1.8.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.5.19", features = ["cargo", "derive", "env", "unicode"] }
console-subscriber = { version = "0", optional = true }
dashmap = "6.1.0"
delouse = { version = "0.1", optional = true }
dropshot = "0.12"
futures = "0.3.28"
futures-util = "0.3.31"
http = "1"
hyper = "1"
libmdns = "0.9.1"
moonraker = { path = "moonraker", optional = true }
multer = { version = "3.1.0", features = ["json"] }
openssl = { version = "0", features = ["vendored"] }
opentelemetry = "0.25.0"
opentelemetry-otlp = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
parse-display = "0.10.0"
prometheus-client = "0.22.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "0.8", features = ["chrono", "uuid1", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
thiserror = "1.0.65"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
tokio-serial = { version = "5", optional = true, features = ["tokio-util", "libudev"] }
toml = "0.8.19"
tracing = "0.1"
tracing-opentelemetry = "0.26.0"
tracing-slog = "0.3.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json", "env-filter"] }
uuid = "1.11.0"

[dev-dependencies]
async-trait = "0.1"
expectorate = "1"
openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
openapiv3 = "2"
portpicker = "0.1.1"
pretty_assertions = "1"
rand = "0.8"
test-context = "0.3.0"
testresult = "0.4.1"
