[package]
name = "bambu-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-rustls = "0.26.0"
rcgen = { version = "0.13", features = ["pem"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3.1"
lazy_static = "1.1"
webpki-roots = "0.26"
rustls-pemfile = "2"
env_logger = "0.11.5"
log = "0.4.22"
rustls = "0.23.12"
url = "2.5.2"
anyhow = "1.0.86"
http-auth = "0.1.9"
openh264 = "0.6.2"
sdl2 = "0.37.0"
nom = "7.1.3"
maplit = "1.0.2"
rtp-types = "0.1.1"
rtp = "0.11.0"
bytes = "1.7.1"
webrtc-util = "0.9.0"
