[package]
name = "bambulabs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
dashmap = "6.1.0"
format_serde_error = { version = "0.3.0", default-features = false, features = ["serde_json"] }
lazy_static = "1.5.0"
nanoid = "0.4.0"
parse-display = "0.10.0"
rumqttc = "0.24.0"
rustls = "0.22"
schemars = { version = "0.8.21", features = ["uuid"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["sync"] }
tracing = "0.1.40"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
