[package]
name = "bambulabs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dashmap = "6.1.0"
format_serde_error = { version = "0.3.0", default-features = false, features = ["serde_json"] }
lazy_static = "1.5.0"
nanoid = "0.4.0"
parse-display = "0.10.0"
rumqttc = "0.24.0"
rustls = "0.22"
schemars = { version = "0.8", features = ["uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.19"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
