[package]
name = "moonraker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
reqwest = { version = "0", features = ["json", "multipart"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0"
